web/book/tests/snapshots/snapshot__tests__prql__syntax__keywords-0.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "std.from my_table\nstd.select [from = my_table.a, take = my_table.b]\nstd.take 3\n"
---
SELECT
  a AS "from",
  b AS take
FROM
  my_table
LIMIT
  3

