web/book/tests/snapshots/snapshot__tests__prql__syntax__lists-1.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nselect [first_name]\n"
---
SELECT
  first_name
FROM
  employees

