web/book/tests/snapshots/snapshot__tests__prql__syntax__parameters-0.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nfilter id == $1\n"
---
SELECT
  *
FROM
  employees
WHERE
  id = $1

