web/book/tests/snapshots/snapshot__tests__prql__syntax__pipes-0.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nfilter department == \"Product\"\nselect [first_name, last_name]\n"
---
SELECT
  first_name,
  last_name
FROM
  employees
WHERE
  department = 'Product'

