web/book/tests/snapshots/snapshot__tests__prql__syntax__pipes-1.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees | filter department == \"Product\" | select [first_name, last_name]\n"
---
SELECT
  first_name,
  last_name
FROM
  employees
WHERE
  department = 'Product'

