web/book/tests/snapshots/snapshot__tests__prql__syntax__quoted-identifiers-0.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "prql target:sql.mysql\nfrom employees\nselect `first name`\n"
---
SELECT
  `first name`
FROM
  employees

