web/book/tests/snapshots/snapshot__tests__prql__syntax__quoted-identifiers-1.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "prql target:sql.postgres\nfrom employees\nselect `first name`\n"
---
SELECT
  "first name"
FROM
  employees

