web/book/tests/snapshots/snapshot__tests__prql__syntax__quoted-identifiers-2.prql.snap
---
source: web/book/tests/snapshot.rs
expression: "from `dir/*.parquet`\n"
---
SELECT
  *
FROM
  "dir/*.parquet"

